Fixed spelling mistakes with dates. Added insta icon

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <h4><b>ENGINEER &nbsp;|&nbsp; DEVELOPER &nbsp;|&nbsp; MAKER</b></h4>
                         <ul class="information margin-tb-30">
                             <li><b>EDUCATION : </b>Mechatronics Engineering @
-                                <a href="https://uwaterloo.ca/" target="_blank">
+                                <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/" target="_blank">
                                     University of Waterloo
                                 </a>
                             </li>
@@ -85,15 +85,10 @@
                                     Facebook
 								</a>
 								 and @ 
-								 <a href="https://www.microsoft.com/" target="_blank">
+								 <a href="https://azure.microsoft.com/en-us/" target="_blank">
                                     Microsoft
                                 </a>
 							</li>
-							<!-- <li><b>Past : </b>Former Software Engineer Intern @
-                                <a href="https://www.microsoft.com/" target="_blank">
-                                    Microsoft
-                                </a>
-                            </li> -->
                             <li><b>EMAIL : </b>
                                 <a href="mailto:nayef.ahmed211@gmail.com">
                                     nayef.ahmed211@gmail.com
@@ -101,11 +96,14 @@
                             </li>
                         </ul>
 						<ul class="social-icons margin-b-10">
+							<li><a href="https://github.com/Nayef211" target="_blank">
+								<i class="fab fa-github"></i></a>
+							</li>
 							<li><a href="https://www.linkedin.com/in/nayef211/" target="_blank">
                                 <i class="fab fa-linkedin-in"></i></a>
-                            </li>
-							<li><a href="https://github.com/Nayef211" target="_blank">
-                                <i class="fab fa-github"></i></a>
+                            </li>						
+							<li><a href="https://www.instagram.com/nayef.211" target="_blank">
+                                <i class="fab fa-instagram"></i></a>
                             </li>
 							<li><a href="https://facebook.com/nayef211" target="_blank">
                                 <i class="fab fa-facebook"></i></a>
@@ -199,7 +197,7 @@
                             <li>Numerous years of coding experience; proficient in C++, C#, and Java</li>
                             <li>Understanding of the software development lifecycle, design patterns (MVC and MVVM), and agile methodologies</li>
                             <li>Working knowledge of Git, Bash, SQL, JavaScript, HTML, and XAML</li>
-                            <li>Relevant Courses: Real Time Operating Systems, Digital Logic and Microprocessors, Data Structures and Algorithms</li>
+                            <li>Relevant Courses: Real Time Operating Systems, Data Structures and Algorithms, Digital Computation</li>
                         </ul>
                     </div><!-- counter -->
                 </div><!-- col-md-4 -->
@@ -207,15 +205,14 @@
                 <div class=" col-sm-6 col-md-6 col-lg-4">
                     <div class="qualification margin-b-30">
                         <div class="offset-1 margin-b-30">
-                            <i class="fa fa-cogs fa-4x"></i>
+                            <i class="fa fa-microchip fa-4x"></i>
                         </div>
-                        <h5 class="margin-tb-20 font-yellow"><b>MECHANICAL</b></h5>
+                        <h5 class="margin-tb-20 font-yellow"><b>Hardware</b></h5>
                         <ul class="list">
-                            <li>Versed at 3D modeling with Solidworks</li>
-                            <li>Drafting and dimensioning using AutoCAD</li>
-                            <li>Rapid prototyping and design using 3D printers and laser cutters</li>
-                            <li>Geometric Dimensioning and Tolerancing knowledge through coursework</li>
-                            <li>Relevant Courses: Engineering Graphics and Design, and Statics</li>
+                            <li>Hands on experience with soldering PCBs as well as designing filters and instrumentation amplifiers</li>
+                            <li>Understanding of various protocols including SPI, I2C, UART, and PCIe</li>
+                            <li>Experience with microprocessor system architectures as well as parallel, serial, and analog interfacing</li>
+                            <li>Relevant Courses: Microprocessors Systems and Interfacing, Sensors and Instrumentation, Digital Logic and Microprocessors</li>
                         </ul>
                     </div><!-- counter -->
                 </div><!-- col-md-4 -->
@@ -334,7 +331,7 @@
                                 <h4><b>SOFTWARE ENGINEER INTERN</b></h4>
                                 <h5 class="font-yellow"><b>MICROSOFT CORPORATION</b></h5>
                             </a>
-							<h6 class="margin-t-10">C#, Redis, Azure &nbsp;|&nbsp; Redmond, WA &nbsp;|&nbsp;  Aug 2018 - Dec 2018</h6>
+							<h6 class="margin-t-10">C#, Redis, Azure &nbsp;|&nbsp; Redmond, WA &nbsp;|&nbsp;  Aug - Dec 2018</h6>
 							<ul class="list margin-tb-30">
 								<li>Worked within Azure DevOps team to create an Ownership Enforcer (OE) service that enforces PR code reviews for compliance and security assurance</li>
 								<li>Improved performance of OE service by designing multi-layered Redis Cache pipelines from the ground up thus reducing VSTS API calls by 70%</li>
@@ -421,7 +418,7 @@
                                 <h4><b>STUDY SPACE</b></h4>
                                 <h5 class="font-yellow"><b>PENNAPPS (GOOGLE PRIZE WINNER)</b></h5>
                             </a>
-							<h6 class="margin-t-10">Android Things, Java, Firebase, NXP Microcontroller &nbsp;|&nbsp; SEP 2017</h6>
+							<h6 class="margin-t-10">Android Things, Java, Firebase, NXP Microcontroller &nbsp;|&nbsp; Sep 2017</h6>
                             <ul class="list margin-tb-30">
                                 <li>Created IoT device along with companion app to display the number of people in specific locations on campus</li>
                                 <li>Determined the occupancy of areas using ‘Android Nearby’ to discover number of wireless devices within range</li>
@@ -433,7 +430,7 @@
                                 <h4><b>SMART GLOVE</b></h4>
                                 <h5 class="font-yellow"><b>IEEE HARDWARE HACKATHON &nbsp;|&nbsp; 3RD PLACE WINNER</b></h5>
                             </a>
-							<h6 class="margin-t-10">Arduino, C, Gyro/Accselerometer (Feb 2017)</h6>
+							<h6 class="margin-t-10">Arduino, C, Gyro/Accselerometer | Feb 2017</h6>
                             <ul class="list margin-tb-30">
                                 <li>Designed glove to wirelessly control IoT devices using simple gestures</li>
                                 <li>Implemented gesture recognition by combining data from capacitive force sensors and 3-axis gyroscope/accelerometers</li>
