Corrected spelling mistakes

--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
                         <ul class="information margin-tb-30">
                             <li><b>EDUCATION : </b>Mechatronics Engineering @
                                 <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/" target="_blank">
-                                    University of Waterloo
+                                    <b>University of Waterloo</b>
                                 </a>
                             </li>
-                            <li><b>Experience : </b>Software Engineer Intern @
+                            <li><b>EXPERIENCE : </b>Software Engineer Intern @
                                 <a href="https://code.fb.com/category/ml-applications/" target="_blank">
-                                    Facebook
+                                    <b>Facebook</b>
 								</a>
 								 and @ 
 								 <a href="https://azure.microsoft.com/en-us/" target="_blank">
-                                    Microsoft
+                                    <b>Microsoft</b>
                                 </a>
 							</li>
                             <li><b>EMAIL : </b>
@@ -127,7 +127,7 @@
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
 					<p class="margin-b-50">Hey, I'm Nayef! I am extremely passionate about <strong>software
-						development</strong>, <strong>embedded systems</strong>, and <strong>robotics</strong>
+						development</strong>, <strong>autonomous vehicles</strong>, and <strong>robotics</strong>
 						and love to work on projects where these fields intersect. I am also a personable
 						team player with an aptitude for <strong>technology</strong>, an intuition
 						for solving <strong>challenging problems</strong>, and a strong track record in
@@ -207,7 +207,7 @@
                         <div class="offset-1 margin-b-30">
                             <i class="fa fa-microchip fa-4x"></i>
                         </div>
-                        <h5 class="margin-tb-20 font-yellow"><b>Hardware</b></h5>
+                        <h5 class="margin-tb-20 font-yellow"><b>HARDWARE</b></h5>
                         <ul class="list">
                             <li>Hands on experience with soldering PCBs as well as designing filters and instrumentation amplifiers</li>
                             <li>Understanding of various protocols including SPI, I2C, UART, and PCIe</li>
