More spelling fixes

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 						
 						<div class="project margin-b-50">
                             <a href="https://github.com/Nayef211/FlappyGoose" target="_blank">
-                                <h4><b>Flappy Goose</b></h4>
+                                <h4><b>FLAPPY GOOSE</b></h4>
                                 <h5 class="font-yellow"><b>RTOS Game in an Embedded Environment</b></h5>
                             </a>
 							<h6 class="margin-t-10">C, Keil RTX RTOS, LPC1768 Microcontroller &nbsp;|&nbsp; Jun - Jul 2018</h6>
