Updated resume and intro height

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                                 </a>
                             </li>
                             <li><b>EXPERIENCE : </b>Software Engineer Intern @
-                                <a href="https://code.fb.com/category/ml-applications/" target="_blank">
-                                    <b>Facebook</b>
+                                <a href="https://research.fb.com/" target="_blank">
+                                    <b>Facebook Research</b>
 								</a>
 								 and @ 
 								 <a href="https://azure.microsoft.com/en-us/" target="_blank">
@@ -109,7 +109,7 @@
                                 <i class="fab fa-facebook"></i></a>
                             </li>
 						</ul>
-						<!-- <a class="btn btn-border-purple" href="http://nayefahmed.com/resume.pdf" target="_blank">Download Resume</a> -->
+						<a class="btn btn-border-purple" href="http://nayefahmed.com/resume.pdf" target="_blank">Download Resume</a>
 					</div><!-- intro -->
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
@@ -127,7 +127,7 @@
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
 					<p class="margin-b-50">Hey, I'm Nayef! I am extremely passionate about <strong>software
-						development</strong>, <strong>autonomous vehicles</strong>, and <strong>robotics</strong>
+						development</strong>, <strong>artificial intelligence</strong>, and <strong>autonomous vehicles</strong>
 						and love to work on projects where these fields intersect. I am also a personable
 						team player with an aptitude for <strong>technology</strong>, an intuition
 						for solving <strong>challenging problems</strong>, and a strong track record in
@@ -325,6 +325,19 @@
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
 					<div class="experience-wrapper">
+
+						<div class="experience margin-b-50">
+							<a href="https://research.fb.com/category/computer-vision/" target="_blank">
+								<h4><b>SOFTWARE ENGINEER INTERN</b></h4>
+								<h5 class="font-yellow"><b>FACEBOOK AI RESEARCH</b></h5>
+							</a>
+							<h6 class="margin-t-10">C++, Python, OpenCV, PyTorch &nbsp;|&nbsp; Menlo Park, CA &nbsp;|&nbsp;  May 2019 - Present</h6>
+							<ul class="list margin-tb-30">
+								<li>Working on the Applied Research Computer Vision team to create a state of the art face detection and tracking pipeline for Facebook videos at scale</li>
+								<li>Benchmarked precision and recall of various detection models (Mask R-CNN and Viola Jones detector) and tracking algorithms on a 600k video dataset</li>
+								<li>Closely collaboarated with leading researchers and internal teams to anonymize faces in the video dataset using detection and tracking results</li>
+							</ul>
+						</div><!-- experience -->
 
 						<div class="experience margin-b-50">
                             <a href="https://visualstudio.microsoft.com/team-services/" target="_blank">
