Updated FB experience

--- a/index.html
+++ b/index.html
@@ -109,7 +109,12 @@
                                 <i class="fab fa-facebook"></i></a>
                             </li>
 						</ul>
-						<a class="btn btn-border-purple" href="http://nayefahmed.com/resume.pdf" target="_blank">Download Resume</a>
+						<!-- <div> -->
+							<a class="btn btn-border-purple" href="http://nayefahmed.com/resume.pdf" target="_blank">View Resume</a>
+							<!-- <a class="btn btn-border-purple" href="http://nayefahmed.com/resume.pdf" target="_blank">Download Resume</a> -->
+						<!-- </div> -->
+						
+	
 					</div><!-- intro -->
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
@@ -132,7 +137,7 @@
 						team player with an aptitude for <strong>technology</strong>, an intuition
 						for solving <strong>challenging problems</strong>, and a strong track record in
 						people <strong>leadership</strong>. I am currently looking for a 4 month co-op
-						during Winter 2020 so feel free to reach out to me if you want me on your team!</p>
+						during Winter and Summer 2020 so feel free to reach out to me if you want me on your team!</p>
 
 					<!--<div class="row">-->
 						<!--<div class="col-sm-6 col-md-6 col-lg-3">-->
@@ -331,11 +336,11 @@
 								<h4><b>SOFTWARE ENGINEER INTERN</b></h4>
 								<h5 class="font-yellow"><b>FACEBOOK AI RESEARCH</b></h5>
 							</a>
-							<h6 class="margin-t-10">C++, Python, OpenCV, PyTorch &nbsp;|&nbsp; Menlo Park, CA &nbsp;|&nbsp;  May 2019 - Present</h6>
+							<h6 class="margin-t-10">C++, Python, OpenCV, PyTorch &nbsp;|&nbsp; Menlo Park, CA &nbsp;|&nbsp;  May 2019 - Aug 2019</h6>
 							<ul class="list margin-tb-30">
-								<li>Working on the Applied Research Computer Vision team to create a state of the art face detection and tracking pipeline for Facebook videos at scale</li>
-								<li>Benchmarked precision and recall of various detection models (Mask R-CNN and Viola Jones detector) and tracking algorithms on a 600k video dataset</li>
-								<li>Closely collaboarated with leading researchers and internal teams to anonymize faces in the video dataset using detection and tracking results</li>
+								<li>Worked within the Applied Research Computer Vision team to create a face detection and tracking pipeline running on all Facebook videos in real-time</li>
+								<li>Benchmarked precision and recall of various detection models (Mask R-CNN, DFSD, Viola-Jones) and tracking algorithms on a 600k SOA video dataset</li>
+								<li>Closely collaborated with leading researchers (Ross Girschick and Yufei Wang) to anonymize faces in the video dataset using detection and tracking results</li>
 							</ul>
 						</div><!-- experience -->
 
