updated urls to comply with https

--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                             </li>
 						</ul>
 						<!-- <div> -->
-							<!-- <a class="btn btn-border-purple" href="http://nayefahmed.com/resume.pdf" target="_blank">Download Resume</a> -->
+							<!-- <a class="btn btn-border-purple" href="https://nayefahmed.com/resume.pdf" target="_blank">Download Resume</a> -->
 						<!-- </div> -->
 						<div>
-							<a class="btn btn-border-purple" href="http://nayefahmed.com/resume.pdf" target="_blank">Download Resume</a>
+							<a class="btn btn-border-purple" href="https://nayefahmed.com/resume.pdf" target="_blank">Download Resume</a>
 						</div>
 						<div class="toggle-resume">
 							<a id="view-resume-btn" class="js-scroll-trigger" href="#about" onclick="toggleResume()">
@@ -269,7 +269,7 @@
 									<!--<img src="images/microsoft-logo.png">-->
 								<!--</div>-->
 
-								<a href="http://watonomous.ca/" target="_blank">
+								<a href="https://watonomous.ca/" target="_blank">
 									<h4><b>PATH PLANNING ENGINEER</b></h4>
 									<h5 class="font-yellow"><b>WATONOMOUS DESIGN TEAM (SELF-DRIVING CAR)</b></h5>
 								</a>
@@ -396,7 +396,7 @@
 									<div class="education margin-b-50">
 										<a href="https://uwaterloo.ca/future-students/programs/mechatronics-engineering" target="_blank">
 											<h4><b>UNIVERSITY OF WATERLOO</b></h4>
-											<h5 class="font-yellow"><b>BASC IN HONOURS MECHATRONICS ENGINEERING CO-OP,&nbsp; OPTION IN ARTIFICIAL INTELLIGENCE</b></h5>
+											<h5 class="font-yellow"><b>B.A.SC. IN HONOURS MECHATRONICS ENGINEERING CO-OP,&nbsp; OPTION IN ARTIFICIAL INTELLIGENCE</b></h5>
 										</a>
 										<h6 class="margin-t-10">Waterloo, ON &nbsp;|&nbsp; 2016 - 2021</h6>
 									</div><!-- education -->
