--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
 	
+	<!-- Google Search Console -->
+	<meta name="google-site-verification" content="xnUdts6-nFLHK-2eJMyebAAHwF7Cx0qEeyVKEotQ1lw" />
 	
 	<!-- Font -->
-	
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700%7CAllura" rel="stylesheet">
 
     <!--Font Awesome-->
