Updated google analytics

--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154455224-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-154455224-1');
+	</script>
+
+	<!-- Metadata -->
 	<title>Nayef Ahmed</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
-	
-	<!-- Google Search Console -->
-	<meta name="google-site-verification" content="xnUdts6-nFLHK-2eJMyebAAHwF7Cx0qEeyVKEotQ1lw" />
-	
+
 	<!-- Font -->
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700%7CAllura" rel="stylesheet">
 
@@ -156,7 +164,7 @@
 								team player with an aptitude for <strong>technology</strong>, an intuition
 								for solving <strong>challenging problems</strong>, and a strong track record in
 								people <strong>leadership</strong>. I am currently looking for a 4 month co-op
-								during Winter and Summer 2020 so feel free to reach out to me if you want me on your team!
+								during Summer 2020 so feel free to reach out to me if you want me on your team!
 							</p>
 
 						</div>
