Removed unnecessary comments and files

--- a/index.html
+++ b/index.html
@@ -131,9 +131,6 @@
                                 <i class="fab fa-facebook"></i></a>
                             </li>
 						</ul>
-						<!-- <div> -->
-							<!-- <a class="btn btn-border-purple" href="https://nayefahmed.com/resume.pdf" target="_blank">Download Resume</a> -->
-						<!-- </div> -->
 						<div>
 							<a class="btn btn-border-purple" href="https://nayefahmed.com/resume.pdf" target="_blank">Download Resume</a>
 						</div>
@@ -171,8 +168,8 @@
 								and love to work on projects where these fields intersect. I am also a personable
 								team player with an aptitude for <strong>technology</strong>, an intuition
 								for solving <strong>challenging problems</strong>, and a strong track record in
-								people <strong>leadership</strong>. I am currently looking for a 4 month co-op
-								during Summer 2020 so feel free to reach out to me if you want me on your team!
+								people <strong>leadership</strong>. I am currently seeking new grad roles starting April 2021. 
+								Please feel free to reach out if you know of any cool opportunities or are looking to collaborate! 
 							</p>
 
 						</div>
@@ -180,68 +177,6 @@
 				</div><!-- row -->
 			</div><!-- container -->
 		</section><!-- about-section -->
-
-		<!-- <section id="qualifications" class="qualifications-section section">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12">
-						<div class="heading">
-							<h3><b>Qualifications</b></h3>
-							<h6 class="font-lite-black"><b>SKILLS AND ACHIEVEMENTS</b></h6>
-						</div>
-					</div>
-
-					<div class="col-sm-12 col-md-4 col-lg-4">
-						<div class="qualification margin-b-30">
-							<div class="offset-1 margin-b-30">
-								<i class="fa fa-code fa-4x"></i>
-							</div>
-							<h5 class="margin-tb-20 font-yellow"><b>SOFTWARE</b></h5>
-							<ul class="list">
-								<li>Numerous years of coding experience; proficient in Python, C++, C#, and Java</li>
-								<li>Understanding of the software development lifecycle, design patterns (MVC and MVVM), and agile methodologies</li>
-								<li>Working knowledge of Git, Bash, SQL, JavaScript, HTML, and XAML</li>
-								<li>Relevant Courses: Real Time O	perating Systems, Data Structures and Algorithms, Digital Computation</li>
-							</ul>
-						</div>
-					</div>
-
-					<div class="col-sm-12 col-md-4 col-lg-4">
-						<div class="qualification margin-b-30">
-							<div class="offset-1 margin-b-30">
-								<i class="fa fa-microchip fa-4x"></i>
-							</div>
-							<h5 class="margin-tb-20 font-yellow"><b>HARDWARE</b></h5>
-							<ul class="list">
-								<li>Hands on experience with soldering PCBs as well as designing filters and instrumentation amplifiers</li>
-								<li>Understanding of various protocols including SPI, I2C, UART, and PCIe</li>
-								<li>Experience with microprocessor system architectures as well as parallel, serial, and analog interfacing</li>
-								<li>Relevant Courses: Microprocessors Systems and Interfacing, Sensors and Instrumentation, Digital Logic and Microprocessors</li>
-							</ul>
-						</div>
-					</div>
-
-					<div class="col-sm-12 col-md-4 col-lg-4">
-						<div class="qualification margin-b-30">
-							<div class="offset-1 margin-b-30">
-								<i class="fa fa-handshake fa-4x"></i>
-							</div>
-							<h5 class="margin-tb-20 font-yellow"><b>ACCOMPLISHMENTS</b></h5>
-							<ul class="list">
-								<li>Google's Best Android Things prize at PennApps 2017</li>
-								<li>3rd place at IEEE Hardware Hackathon</li>
-								<li>Presidents Scholarship of Distinction (valued at $5,000)</li>
-								<li>Chancellor's Scholarship (valued at $36,000)</li>
-								<li>TDSB Top Scholar - Ranked top 5 (average 99.3%) out of over 21,000 students
-									in the Toronto District School Board
-								</li>
-							</ul>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</section> -->
 		
 		<section id="experience" class="experience-section section">
 			<div class="container">
@@ -257,7 +192,7 @@
 
 							<div class="experience margin-b-50">
 								<a href="https://research.fb.com/category/computer-vision/" target="_blank">
-									<h4><b>SOFTWARE ENGINEER INTERN - AUOTNOMOUS VEHICLES</b></h4>
+									<h4><b>SOFTWARE ENGINEER INTERN - AUTONOMOUS VEHICLES</b></h4>
 									<h5 class="font-yellow"><b>LYFT LEVEL 5</b></h5>
 								</a>
 								<h6 class="margin-t-10">C++, Python, TensorFlow &nbsp;|&nbsp; Palo Alto, CA &nbsp;|&nbsp;  Jan - Apr 2020</h6>
@@ -294,10 +229,6 @@
 							</div><!-- experience -->
 
 							<div class="experience margin-b-50">
-								<!--<div class="logo">-->
-									<!--<img src="images/microsoft-logo.png">-->
-								<!--</div>-->
-
 								<a href="https://watonomous.ca/" target="_blank">
 									<h4><b>PATH PLANNING ENGINEER</b></h4>
 									<h5 class="font-yellow"><b>WATONOMOUS DESIGN TEAM (SELF-DRIVING CAR)</b></h5>
