--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<div class="col-md-1 col-lg-2"></div>
 				<div class="col-md-10 col-lg-8">
 					<div class="intro">
-						<div class="profile-img"><img src="images/headshot_spain.jpg" alt=""></div>
+						<div class="profile-img"><img src="images/headshot_california.jpg" alt=""></div>
 						<h2 class="font-purple"><b>Nayef Ahmed</b></h2>
                         <h4><b>ENGINEER &nbsp;|&nbsp; DEVELOPER &nbsp;|&nbsp; MAKER</b></h4>
                         <ul class="information margin-tb-30">
@@ -195,7 +195,7 @@
 									<h4><b>SOFTWARE ENGINEER INTERN - AUTONOMOUS VEHICLES</b></h4>
 									<h5 class="font-yellow"><b>LYFT LEVEL 5</b></h5>
 								</a>
-								<h6 class="margin-t-10">C++, Python, TensorFlow &nbsp;|&nbsp; Palo Alto, CA &nbsp;|&nbsp;  Jan - Apr 2020</h6>
+								<h6 class="margin-t-10">C++, Python, TensorFlow, OpenCV &nbsp;|&nbsp; Palo Alto, CA &nbsp;|&nbsp;  Jan - Apr 2020</h6>
 								<ul class="list margin-tb-30">
 									<li>Training state of the art deep learning models for object detection within the
 									Perception team for Level 5 self-driving cars</li>
