Updated positions, resume, and created archive folder

--- a/index.html
+++ b/index.html
@@ -191,14 +191,26 @@
 						<div class="experience-wrapper">
 
 							<div class="experience margin-b-50">
-								<a href="https://research.fb.com/category/computer-vision/" target="_blank">
+								<a href="https://ai.facebook.com/tools/pytorch/" target="_blank">
+									<h4><b>SOFTWARE ENGINEER INTERN</b></h4>
+									<h5 class="font-yellow"><b>FACEBOOK AI RESEARCH</b></h5>
+								</a>
+								<h6 class="margin-t-10">C++, Python, Pytorch &nbsp;|&nbsp; New York, NY (Remote) &nbsp;|&nbsp;  May - Sep 2020</h6>
+								<ul class="list margin-tb-30">
+									<li>Working with the AI Platform team to develop new NLP models for PyTorch</li>
+								</ul>
+							</div><!-- experience -->
+
+							<div class="experience margin-b-50">
+								<a href="https://level5.lyft.com/" target="_blank">
 									<h4><b>SOFTWARE ENGINEER INTERN - AUTONOMOUS VEHICLES</b></h4>
 									<h5 class="font-yellow"><b>LYFT LEVEL 5</b></h5>
 								</a>
 								<h6 class="margin-t-10">C++, Python, TensorFlow, OpenCV &nbsp;|&nbsp; Palo Alto, CA &nbsp;|&nbsp;  Jan - Apr 2020</h6>
 								<ul class="list margin-tb-30">
-									<li>Training state of the art deep learning models for object detection within the
-									Perception team for Level 5 self-driving cars</li>
+									<li>Trained new classifier with the Perception team capable of detecting traffic light bulb shapes with 90%+ accuracy on an extremely unbalanced dataset</li>
+									<li>Designed a regression test suite which can provide a binary decision for engineers when deciding whether to release a new model to the vehicle</li>
+									<li>Created a test creation GUI that gives engineers finer control when selecting relevant obstacles from an image which cannot be regressed on in the future</li>
 								</ul>
 							</div><!-- experience -->
 
@@ -237,7 +249,7 @@
 								<ul class="list margin-tb-30">
 									<li>Worked within Sensor Fusion subteam to transform a Chevrolet Bolt EV into a level 4 autonomous vehicle for the SAE AutoDrive Challenge</li>
 									<li>Implemented path visualization algorithms using ROS and Rviz to display the path of the car generated using a trajectory rollout approach</li>								
-									<li>Implemented sensor fusion algorithms to combine raw camera and Lidar data to obtain better representation of car’s surroundings</li>
+									<li>Developed core algorithms for cost map generation using a 2-layered occupancy grid system for dynamic replanning</li>
 								</ul>
 							</div><!-- experience -->
 
@@ -356,7 +368,8 @@
 									<div class="education margin-b-50">
 										<a href="https://uwaterloo.ca/future-students/programs/mechatronics-engineering" target="_blank">
 											<h4><b>UNIVERSITY OF WATERLOO</b></h4>
-											<h5 class="font-yellow"><b>B.A.SC. IN HONOURS MECHATRONICS ENGINEERING CO-OP,&nbsp; OPTION IN ARTIFICIAL INTELLIGENCE</b></h5>
+											<h5 class="font-yellow"><b>B.A.SC. IN HONOURS MECHATRONICS ENGINEERING, CO-OP</b></h5>
+											<h5 class="font-yellow"><b>OPTION IN ARTIFICIAL INTELLIGENCE</b></h5>
 										</a>
 										<h6 class="margin-t-10">Waterloo, ON &nbsp;|&nbsp; 2016 - 2021</h6>
 									</div><!-- education -->
@@ -364,7 +377,7 @@
 									<div class="education margin-b-50">
 										<a href="https://www.uc3m.es/home" target="_blank">
 											<h4><b>CHARLES III UNIVERSITY OF MADRID</b></h4>
-											<h5 class="font-yellow"><b>STUDY ABROAD SEMESTER</b></h5>
+											<h5 class="font-yellow"><b>INTERNATIONAL EXCHANGE SEMESTER</b></h5>
 										</a>
 										<h6 class="margin-t-10">Madrid, SPAIN &nbsp;|&nbsp; Sep - Dec 2019</h6>
 									</div><!-- education -->
