--- a/index.html
+++ b/index.html
@@ -124,12 +124,14 @@
 							<li><a href="https://www.linkedin.com/in/nayef211/" target="_blank">
                                 <i class="fab fa-linkedin-in"></i></a>
                             </li>						
-							<li><a href="https://www.instagram.com/nayef.211" target="_blank">
+							<li><a href="https://www.instagram.com/nayef.photo/" target="_blank">
                                 <i class="fab fa-instagram"></i></a>
                             </li>
+							<!-- 	
 							<li><a href="https://facebook.com/nayef211" target="_blank">
                                 <i class="fab fa-facebook"></i></a>
                             </li>
+							-->
 						</ul>
 						<div>
 							<a class="btn btn-border-purple" href="https://nayefahmed.com/resume.pdf" target="_blank">Download Resume</a>
@@ -197,9 +199,10 @@
 									<h4><b>SOFTWARE ENGINEER INTERN</b></h4>
 									<h5 class="font-yellow"><b>FACEBOOK AI RESEARCH</b></h5>
 								</a>
-								<h6 class="margin-t-10">C++, Python, Pytorch &nbsp;|&nbsp; New York, NY (Remote) &nbsp;|&nbsp;  May - Sep 2020</h6>
+								<h6 class="margin-t-10">C++, Python, Pytorch, TorchScript &nbsp;|&nbsp; New York, NY (Remote) &nbsp;|&nbsp;  May - Sep 2020</h6>
 								<ul class="list margin-tb-30">
 									<li>Working with the AI Platform team to design and implement high-performance NLP building blocks (Tokenizer, Vector, Vocab) for PyTorch</li>
+									<li>Profiling CPU performance of NLP preprocessors on several datasets using Flame Graphs and applying concurrency to decrease load times by over 10x</li>
 									<li>Training a BERT model with masked-language modeling and next-sentence tasks to improve performance on IWSLT’14 English-German translation dataset</li>
 									<li>Supporting upcoming Pytorch releases to facilitate NLP research and demonstrate feasability of new features for internal adoption</li>
 								</ul>
