Updated header to say researcher

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<div class="intro">
 						<div class="profile-img"><img src="images/headshot_california.jpg" alt=""></div>
 						<h2 class="font-purple"><b>Nayef Ahmed</b></h2>
-                        <h4><b>ENGINEER &nbsp;|&nbsp; DEVELOPER &nbsp;|&nbsp; MAKER</b></h4>
+                        <h4><b>ENGINEER &nbsp;|&nbsp; RESEARCHER &nbsp;|&nbsp; DEVELOPER</b></h4>
                         <ul class="information margin-tb-30">
                             
                             <li><b>CURRENT : </b>Software Engineer Intern @ 
