Updated experience. Removed dates from projects

--- a/index.html
+++ b/index.html
@@ -202,9 +202,10 @@
 								<h6 class="margin-t-10">C++, Python, Pytorch, TorchScript &nbsp;|&nbsp; New York, NY (Remote) &nbsp;|&nbsp;  May - Sep 2020</h6>
 								<ul class="list margin-tb-30">
 									<li>Working with the AI Platform team to design and implement high-performance NLP building blocks (Tokenizer, Vector, Vocab) for PyTorch</li>
-									<li>Profiling CPU performance of NLP preprocessors on several datasets using Flame Graphs and applying concurrency to decrease load times by over 10x</li>
-									<li>Training a BERT model with masked-language modeling and next-sentence tasks to improve performance on IWSLT’14 English-German translation dataset</li>
+									<li>Profiling CPU performance of NLP preprocessors on several datasets using Flame Graphs and applying concurrency to decrease load times by over 60x</li>
+									<!-- <li>Training a BERT model with masked-language modeling and next-sentence tasks to improve performance on IWSLT’14 English-German translation dataset</li> -->
 									<li>Supporting upcoming Pytorch releases to facilitate NLP research and demonstrate feasability of new features for internal adoption</li>
+									<li>Won several awards for creating a “quickchat” feature in Workplace VC at the Global Summer Hackathon, receiving enough interest to ship to production</li>
 								</ul>
 							</div><!-- experience -->
 
@@ -310,7 +311,7 @@
 									<h4><b>FLAPPY GOOSE</b></h4>
 									<h5 class="font-yellow"><b>RTOS GAME IN AN EMBEDDED ENVIRONMENT</b></h5>
 								</a>
-								<h6 class="margin-t-10">C, Keil RTX RTOS, LPC1768 Microcontroller &nbsp;|&nbsp; Jun - Jul 2018</h6>
+								<h6 class="margin-t-10">C, Keil RTX RTOS, LPC1768 Microcontroller</h6>
 								<ul class="list margin-tb-30">
 									<li>Recreated the Flappy Bird game using Keil MCB1700 board in a real-time OS</li>
 									<li>Used task synchronization and interrupts to update LCD graphics, player score, game physics, and handle peripheral I/O simultaneously</li>
@@ -322,7 +323,7 @@
 									<h4><b>STUDY SPACE</b></h4>
 									<h5 class="font-yellow"><b>PENNAPPS (GOOGLE PRIZE WINNER)</b></h5>
 								</a>
-								<h6 class="margin-t-10">Android Things, Java, Firebase, NXP Microcontroller &nbsp;|&nbsp; Sep 2017</h6>
+								<h6 class="margin-t-10">Android Things, Java, Firebase, NXP Microcontroller</h6>
 								<ul class="list margin-tb-30">
 									<li>Created IoT device along with companion app to display the number of people in specific locations on campus</li>
 									<li>Determined the occupancy of areas using ‘Android Nearby’ to discover number of wireless devices within range</li>
@@ -334,7 +335,7 @@
 									<h4><b>SMART GLOVE</b></h4>
 									<h5 class="font-yellow"><b>IEEE HARDWARE HACKATHON &nbsp;|&nbsp; 3RD PLACE WINNER</b></h5>
 								</a>
-								<h6 class="margin-t-10">Arduino, C, Gyro/Accselerometer | Feb 2017</h6>
+								<h6 class="margin-t-10">Arduino, C, Gyro/Accselerometer</h6>
 								<ul class="list margin-tb-30">
 									<li>Designed glove to wirelessly control IoT devices using simple gestures</li>
 									<li>Implemented gesture recognition by combining data from capacitive force sensors and 3-axis gyroscope/accelerometers</li>
@@ -345,7 +346,7 @@
 							<div class="project margin-b-50">
 								<h4><b>DOG WHEELCHAIR LIFT</b></h4>
 								<h5 class="font-yellow"><b>ROBOTICS PROJECT</b></h5>
-								<h6 class="margin-t-10">C++, RobotC, AutoCAD &nbsp;|&nbsp; Oct - Dec 2016</h6>
+								<h6 class="margin-t-10">C++, RobotC, AutoCAD</h6>
 								<ul class="list margin-tb-30">
 									<li>Constructed wheelchair lift to allow handicapped dogs to scale obstacles with heights up to 20cm</li>
 									<li>Implemented automatic deployment/stoppage of lift sequences by detecting obstacles using gyroscope and ultrasonic sensors</li>
@@ -378,7 +379,7 @@
 											<h5 class="font-yellow"><b>B.A.SC. IN HONOURS MECHATRONICS ENGINEERING, CO-OP</b></h5>
 											<h5 class="font-yellow"><b>OPTION IN ARTIFICIAL INTELLIGENCE</b></h5>
 										</a>
-										<h6 class="margin-t-10">Waterloo, ON &nbsp;|&nbsp; 2016 - 2021</h6>
+										<h6 class="margin-t-10">Waterloo, ON &nbsp;|&nbsp; Sep 2016 - Apr 2021</h6>
 									</div><!-- education -->
 		
 									<div class="education margin-b-50">
