--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 									<li>Working with the AI Platform team to design and implement high-performance NLP building blocks (Tokenizer, Vector, Vocab) for PyTorch</li>
 									<li>Profiling CPU performance of NLP preprocessors on several datasets using Flame Graphs and applying concurrency to decrease load times by over 60x</li>
 									<!-- <li>Training a BERT model with masked-language modeling and next-sentence tasks to improve performance on IWSLT’14 English-German translation dataset</li> -->
-									<li>Supporting upcoming Pytorch releases to facilitate NLP research and demonstrate feasability of new features for internal adoption</li>
+									<li>Supporting upcoming Pytorch releases to facilitate NLP research and demonstrate the feasibility of new features for internal adoption</li>
 									<li>Won several awards for creating a “quickchat” feature in Workplace VC at the Global Summer Hackathon, receiving enough interest to ship to production</li>
 								</ul>
 							</div><!-- experience -->
