Updated university location

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 											<h5 class="font-yellow"><b>B.A.SC. IN HONOURS MECHATRONICS ENGINEERING, CO-OP</b></h5>
 											<h5 class="font-yellow"><b>OPTION IN ARTIFICIAL INTELLIGENCE</b></h5>
 										</a>
-										<h6 class="margin-t-10">Waterloo, ON &nbsp;|&nbsp; Sep 2016 - Apr 2021</h6>
+										<h6 class="margin-t-10">Waterloo, CANADA &nbsp;|&nbsp; Sep 2016 - Apr 2021</h6>
 									</div><!-- education -->
 		
 									<div class="education margin-b-50">
